Dernières modifications pour la version v1.0.0
